--- a/templates/home.html
+++ b/templates/home.html
@@ -143,7 +143,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bi-journal-bookmark-fill"></i></div>
-              <h4><a href="">OBSERVER CONTRIBUTION</a></h4>
+              <h4><a href="../observations">OBSERVER CONTRIBUTION</a></h4>
               <p>Share your observations, sightings, and experiences with different species, and contribute to ongoing research and conservation efforts.</p>
             </div>
           </div>
