--- a/templates/links.html
+++ b/templates/links.html
@@ -16,7 +16,23 @@
     <!-- Bootstrap CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Your existing styles here -->
+     <link href="../static/assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Google Fonts -->
+  <!--link href="../static/https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet"-->
+
+  <!-- Vendor CSS Files -->
+  <link href="../static/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="../static/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../static/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../static/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="../static/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="../static/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="../static/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="../static/assets/css/style.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="../static/sign-in.css" rel="stylesheet">
@@ -27,12 +43,12 @@
         <!-- Your existing SVG symbols here -->
     </svg>
 
-    <div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle">
+    <!--div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle"-->
         <!-- Your existing theme toggle dropdown here -->
-    </div>
+    <!--/div-->
 
     <main class="container text-center">
-        <h1 class="h3 mb-3 fw-normal">Data Entry Links</h1>
+        <!--h1 class="h3 mb-3 fw-normal">Data Entry Links</h1>
 
         <ul class="list-unstyled">
             <li><a href="http://127.0.0.1:5000/species">Enter Species Data</a></li>
@@ -40,9 +56,82 @@
             <li><a href="http://127.0.0.1:5000/population">Enter Population Data</a></li>
             <li><a href="http://127.0.0.1:5000/location">Enter Location Data</a></li>
             <li><a href="http://127.0.0.1:5000/wildlife_reserve">Enter Wildlife Reserve Data</a></li>
-        </ul>
-    </main>
+        </ul-->
+        <section id="services" class="services">
+            <div class="container" data-aos="fade-up">
+      
+              
+      
+              <div class="row">
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-5" data-aos="zoom-in" data-aos-delay="100">
+                  <div class="icon-box">
+                    <div class="icon"><i class="bi-vector-pen"></i></div>
+                    <h4><a href="http://127.0.0.1:5000/species">Enter Species Data</a></h4>
+                    <p>-------------------------------------------------------------------------------</p>
+                  </div>
+                </div>
+      
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-5" data-aos="zoom-in" data-aos-delay="200">
+                  <div class="icon-box">
+                    <div class="icon"><i class="bi-vector-pen"></i></div>
+                    <h4><a href="http://127.0.0.1:5000/taxonomy">Enter Taxonomy Data</a></h4>
+                    <p>-------------------------------------------------------------------------------</p>
+                  </div>
+                </div>
+      
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-5" data-aos="zoom-in" data-aos-delay="300">
+                  <div class="icon-box">
+                    <div class="icon"><i class="bi-vector-pen"></i></div>
+                    <h4><a href="http://127.0.0.1:5000/population">Enter Population Data</a></h4>
+                    <p>-------------------------------------------------------------------------------</p>
+                  </div>
+                </div>
+                
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-5" data-aos="zoom-in" data-aos-delay="300">
+                    <div class="icon-box">
+                      <div class="icon"><i class="bi-vector-pen"></i></div>
+                      <h4><a href="http://127.0.0.1:5000/location">Enter Location Data</a></h4>
+                    <p>-------------------------------------------------------------------------------</p>
+                    </div>
+                  </div>
 
+                  <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-5" data-aos="zoom-in" data-aos-delay="300">
+                    <div class="icon-box">
+                      <div class="icon"><i class="bi-vector-pen"></i></div>
+                      <h4><a href="http://127.0.0.1:5000/wildlife_reserve">Enter Wildlife Reserve Data</a></h4>
+                    <p>-------------------------------------------------------------------------------</p>
+                    </div>
+                  </div>
+
+                  <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-5" data-aos="zoom-in" data-aos-delay="300">
+                    <div class="icon-box">
+                      <div class="icon"><i class="bi-vector-pen"></i></div>
+                      <h4><a href="../observations">OBSERVER CONTRIBUTION</a></h4>
+                      <p>-------------------------------------------------------------------------------</p>
+                    </div>
+                  </div>
+                
+                </div>
+      
+              </div>
+      
+            </div>
+          </section>
+    </main>
+    <div id="preloader"></div>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script src="../static/assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="../static/assets/vendor/aos/aos.js"></script>
+  <script src="../static/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../static/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="../static/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="../static/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../static/assets/vendor/php-email-form/validate.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="../static/assets/js/main.js"></script>
     <!-- Bootstrap JS (optional, if you need it) -->
     <script src="../static/js/bootstrap.bundle.min.js"></script>
 </body>
