--- a/templates/population.html
+++ b/templates/population.html
@@ -33,7 +33,7 @@
     </div>
 
     <main class="form-signin w-100 m-auto">
-        <form method="POST" action="/populations">
+        <form method="POST" action="/population">
             <h1 class="h3 mb-3 fw-normal">Add Population</h1>
 
             <div class="form-floating">
