--- a/templates/home.html
+++ b/templates/home.html
@@ -127,7 +127,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bi-tree-fill"></i></div>
-              <h4><a href="">SPECIES INSIGHTS</a></h4>
+              <h4><a href="../disp_links">SPECIES INSIGHTS</a></h4>
               <p>Explore detailed information about animals, birds,and plants, including their habitats, behaviors, and conservation status.</p>
             </div>
           </div>
