--- a/templates/location.html
+++ b/templates/location.html
@@ -33,7 +33,7 @@
     </div>
 
     <main class="form-signin w-100 m-auto">
-        <form method="POST" action="/locations">
+        <form method="POST" action="/location">
             <h1 class="h3 mb-3 fw-normal">Add Location</h1>
 
             <div class="form-floating">
