--- a/templates/delete_population.html
+++ b/templates/delete_population.html
@@ -1,4 +1,4 @@
-<!-- delete_location.html -->
+<!-- delete_population.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.118.2">
-    <title>Delete Location</title>
+    <title>Delete Population</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/sign-in/">
 
@@ -34,9 +34,9 @@
     </div>
     <main class="form-signin w-100 m-auto">
         <h2>Confirm Deletion</h2>
-        <p>Are you sure you want to delete all details about the location of this species?</p>
-        <form method="post" action="{{ url_for('delete_location', location_id=location_id) }}">
-            
+        <p>Are you sure you want to delete all details about the population of this species?</p>
+        <form method="post" action="{{ url_for('delete_population', population_id=population_id) }}">
+            <!-- Assuming you have a variable named population_id for the population being deleted -->
             <button class="btn btn-primary w-100 py-2" type="submit">DELETE</button>
         </form>
     </main>
