dark/light mode

--- a/templates/home.html
+++ b/templates/home.html
@@ -135,7 +135,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bi-vector-pen"></i></div>
-              <h4><a href="../links">INPUT NEW DATA</a></h4>
+              <h4><a href="../links">ENTER BIOLOGICAL PROFILES</a></h4>
               <p>Connect with fellow nature enthusiasts, share your wildlife experiences, and contribute to the global biodiversity database.</p>
             </div>
           </div>
