--- a/templates/links.html
+++ b/templates/links.html
@@ -103,13 +103,13 @@
                     </div>
                   </div>
 
-                  <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-5" data-aos="zoom-in" data-aos-delay="300">
+                  <!--div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-5" data-aos="zoom-in" data-aos-delay="300">
                     <div class="icon-box">
                       <div class="icon"><i class="bi-vector-pen"></i></div>
                       <h4><a href="../observations">OBSERVER CONTRIBUTION</a></h4>
                       <p>-------------------------------------------------------------------------------</p>
                     </div>
-                  </div>
+                  </div-->
                 
                 </div>
       
