--- a/templates/upd_wildlife_reserve.html
+++ b/templates/upd_wildlife_reserve.html
@@ -51,10 +51,10 @@
                 <label for="area">Area (in sq. units)</label>
             </div>
 
-            <div class="form-floating">
+            <!--div class="form-floating">
                 <input type="number" class="form-control" id="pincode" name="pincode" placeholder="Pincode" value="{{ reserve_data.PINCODE }}" required>
                 <label for="pincode">Pincode</label>
-            </div>
+            </div-->
 
             <div class="form-floating">
                 <input type="text" class="form-control" id="iconicSpecies" name="iconicSpecies" placeholder="Iconic Species" value="{{ reserve_data.ICONIC_SPECIES }}" required>
