final update 10 mar

--- a/templates/users.html
+++ b/templates/users.html
@@ -62,7 +62,7 @@
 
     <main class="form-signin">
         <form method="POST" action="/users">
-            <h1 class="h3 mb-3 fw-normal">Add User</h1>
+            <h1 class="h3 mb-3 fw-normal">Registration</h1>
 
             <!--div class="form-floating">
                 <input type="text" class="form-control" id="userId" name="userId" placeholder="User ID" required>
